# wrldc_demand_forecasting_portal

./: .gitignore  config_dummy.xlsx  demo.py  main.py  pyproject.toml  requirements.txt  requrements.txt.txt  run_server.bat  server.py  setup_env.bat  setup_service.bat
src/fetchers/: demandDataFetcher.py
src/routeControllers/: demandFrequencyController.py  dfm3ApiController.py  dfm4ApiController.py
src/services/: biasErrorCalculator.py  dayaheadForecastFetcher.py  demandDataFetcher.py  dmf2DAForecastFetcher.py  forecastedDemandFetcher.py  intradayForecastedDemandFetcher.py  todayActualDemandFetcher.py
src/services/actualDemandFetch/: prevActualDemandFetcher.py  scadaApiFetcher.py  todayActualDemandFetcher.py
src/services/demandFreqFetch/: demandFetchService.py  freqFetchService.py  scadaApiFetcher.py
src/services/dfm1Fetchers/: dayaheadForecastFetcher.py  intradayForecastedDemandFetcher.py
src/services/dfm2Fetchers/: dfm2DAForecastFetcher.py  dfm2IntradayForecastedDemandFetcher.py
src/services/dfm3Fetchers/: dfm3DAForecastFetcher.py  (+1 more)
src/typeDefs/: appConfig.py
static/: package-lock.json  package.json  webpack.config.js
static/src/: achtual&ForecastedApiUtils.ts  actual&ForecastedApiUtils.ts  demandFreqFetchApiUtils.ts  demandFreqIndex.ts  demandFreqPlotUtils.ts  dfm2Actual&ForecastedApiUtils.ts  dfm2Index.ts  dfm3Actual&ForecastedApiUtils.ts  dfm3Index.ts  dfm4Actual&ForecastedApiUtils.ts  dfm4Index.ts  index.ts  plotUtils.ts  timeUtils.ts
templates/: demandFrequency.html.j2  dfm2Home.html.j2  dfm3Home.html.j2  dfm4Home.html.j2  home.html.j2
(+2 files in other folders)
