[project]
name = "wrldc-forecasting-portal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "flask>=3.1.2",
    "openpyxl>=3.1.5",
    "oracledb>=3.4.0",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "waitress>=3.0.2",
]
